# starlite-barebones-template

./: .bumpversion.cfg  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml  docs.yml
app/: __init__.py  asgi.py
app/templates/: index.html
app/templates/base/: base.html  footer.html  header.html  menu.html
docs/: app.rst  conf.py  index.md  index.rst
docs/usage_guide/: developer_setup.md  installation.md  releases.md  workflows.md
search/: search_index.json
tests/: test_asgi.py
usage_guide/developer_setup/: index.html
usage_guide/installation/: index.html
usage_guide/releases/: index.html
usage_guide/workflows/: index.html
