[tool.poetry]
name = "starlite-barebones-template"
version = "0.1.1"
description = "Starlite API barebones template project"
authors = ["Jacob Coffee <jacob@z7x.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/JacobCoffee/starlite-barebones-template"
packages = [
    {include = "app"},
]

[tool.poetry.dependencies]
python = "^3.10"
starlite = "^1.50.1"
uvicorn = "*"
python-dotenv = "*"
structlog = "*"
msgspec = "*"
pydantic = "*"

# ================= #
#  Optional Addons  #
# ================= #
saq = {version = "*", optional = true}
asyncpg =  {version = "*", optional = true}
sqlalchemy = {version = "*", optional = true}
redis = {version = "*", optional = true}
isort = "^5.12.0"
mkdocs-material = "^9.0.11"
pytailwindcss = "^0.1.4"

[tool.poetry.extras]
cache = ["redis"]
worker = ["saq"]
db = ["sqlalchemy", "asyncpg"]
all = ["redis", "saq", "sqlalchemy", "asyncpg"]

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "*"}
cython = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-docker = "*"
pytest-dotenv = "*"
pytest-mock = "*"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "*"
isort = "*"
ruff = "*"
pre-commit = "*"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.0.11"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["*.py", "*/__init__.py", "*/__version__.py", "*/_version.py", "*.md"]

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
exclude = '''
/(
    \.git
  | \.ruff_cache
  | venv
  | \.venv
)/
'''
line-length = 120

[tool.isort]
line_length = 119
multi_line_output = 3
profile = "black"
skip_gitignore = true
src_paths = ["app/"]

[tool.ruff]
line-length = 120

[tool.codespell]
count = ''
quiet-level = 3
